--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/svg/json.svg":["assets/svg/json.svg"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/svg/bold.svg":["assets/svg/bold.svg"],"assets/svg/italic.svg":["assets/svg/italic.svg"],"assets/svg/json.svg":["assets/svg/json.svg"],"assets/svg/text_decrease.svg":["assets/svg/text_decrease.svg"],"assets/svg/text_increase.svg":["assets/svg/text_increase.svg"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
